# DASstore

./: .gitignore  .pre-commit-config.yaml  README.md  citation.cff  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: precommit.yaml  release.yaml  test.yaml
dasstore/: __init__.py
dasstore/tiledb/: client.py
dasstore/utils/: convert.py  credential.py
dasstore/zarr/: client.py
data/: benchmark.csv  benchmark_aws.csv  chunk_size_test.csv  local_zarr_test.csv  test.csv  tile_size_test.csv  tiledb_minio_benchmark.csv  zarr_minio_benchmark.csv
modules/: convert.py
notebooks/: Zarr_MinIO_OOI_DAS.ipynb  dev_convert_1d_OOI_DAS.ipynb  dev_dask_zarr.ipynb  dev_hdf5_to_zarr.ipynb  dev_jr.ipynb  file_list.txt  plot_benchmark.ipynb  robtestnbk.ipynb  tutorial_client_zarr_backend_SeaDAS.ipynb
scripts/: batch_download.sh  file_list.txt  file_list_test.txt  hosts  mpi_conversion_seadas-december-tiledb.py  mpi_conversion_seadas-december-zarr.py  mpi_crossmount_h5.py  mpi_local_h5.py  mpi_local_h5_chunked.py  mpi_local_zarr.py  mpi_minio_tiledb.py  mpi_minio_zarr.py  mpi_sermeq2pnwstore1_OOI_DAS_1d.py  ooi_STx_h2zarr.py  timing_tests.py
scripts/notebooks/: dev_jr.ipynb
tests/: test_credential.py  test_main.py  test_tiledb.py  test_zarr.py
tutorials/: tutorial_client_zarr_backend_SeaDAS.ipynb  tutorial_schema_tiledb_backend_OOI-DAS.ipynb  tutorial_schema_tiledb_backend_SeaDAS.ipynb  tutorial_schema_zarr_backend_OOI-DAS.ipynb  tutorial_schema_zarr_backend_SeaDAS.ipynb
