[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dasstore"
dynamic = ["version"]
description = "An Object Storage for Distributed Acoustic Sensing"
readme = "README.md"
license = {file= "LICENSE"}
requires-python = ">=3.8,<3.11"
authors = [
    { email = "niyiyu@uw.edu", name = "Yiyu Ni" },
]
keywords = [
    "cloud-storage",
    "seismology",
    "data",
    "distributed-acoustic-sensing",
    "object-storage",
    "s3",
    "minio"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "pandas>=1.5.3,<2.0.0",
    "fsspec>=2023.4.0,<2024.0.0",
    "s3fs==2023.4.0,<2024.0.0",
    "zarr==2.14.2",
    "tiledb==0.23.0"
]


[project.urls]
Homepage = "https://github.com/niyiyu/dasstore"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "dasstore/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[project.optional-dependencies]
dev = [
    "pytest==7.2.2",
    "pytest-cov==4.1.0",
    "memory-profiler==0.61",
    "pre-commit==3.3.3",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
filter_files = true
